style.css
/* Basic Things to Do First */
@import url("https://use.typekit.net/ovt6ynt.css");
@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Spectral:wght@200;300;400;500;600;700;800&display=swap");
@font-face {
  font-family: "Techno Race Italic";
  src: url("fonts/technoraceitalic.woff") format("woff"),
       url("fonts/technoraceitalic.ttf") format("truetype");
}

body {
    margin: 0;
    height: 100%;
	font-family: "Roboto", sans-serif;
	background: linear-gradient(#201F2F, #141e30);
	color: white;
}

header {
    color: white;
    background-color: black;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: sticky;
    top: 0;
    z-index: 100;
}

main {
    margin: 14px;
}

.username {
    margin-bottom: 21px;
    font-size: 24px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%) skewX(15deg);
    font-family: "Techno Race Italic";
}

.spiderWebFlat {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50px;
    height: 50px;
    padding-right: 180px;
}

/* Navigation Menu Decoration */
.nav-menu {
    display: flex;
    justify-content: space-between;
    position: absolute;
}

.nav-menu ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.nav-menu li {
    display: inline-block;
}

.nav-menu a {
    color: white;
    text-decoration: none;
    padding: 7px;
    display: block;
    background-color: brown;

    /* Add a box shadow to create a 3D effect */
    box-shadow: inset 0 -3px white;

    /* Add a transition effect for the box shadow */
    transition: box-shadow 0.3s ease-in-out;
}

/* Change the box shadow on hover to create a push effect */
.nav-menu a:hover {
    box-shadow: inset 0 -3px brown;
    color: black;
    transition: 0.3 ease-in-out;
}

/* Add some shapes and icons before the link text using pseudo-elements */
.nav-menu a:before {
    content: "";
    display: inline-block;
    width: 16px;
    height: 16px;

    /* Position the pseudo-element relative to the link */
    position: relative;

    /* Move it to the left of the link */
    margin-left: -20px;

    /* Hide it by default */
    opacity: 0;

    /* Add a transition effect for the opacity and margin */
    transition: opacity 0.3s ease-in-out, margin-left 0.3s ease-in-out;
}

/* Change the opacity and margin on hover to make the pseudo-element visible */
.nav-menu a:hover:before {
    opacity: 1;
    margin-right: 1px;
}

.social-links {
    justify-content: space-between;
    display: inline-flex;
}

.social-links ul {
    list-style: none;
    padding: 4px 0 0 0;
    text-decoration: none;
    margin: 0 0 0 4px;
    background-color: brown;
}

.social-links ul li {
    padding: 4px;
}

.social-links ul li a img:hover {
    transform: scale(1.2); /* Scales the icon up when hovered over */
}

.social-links ul li a img {
    width: 35px;
    height: 25px;
    transition: transform 0.3s ease-in-out; /* Adds a smooth transition effect */
}

footer {
    text-align: center;
    margin-top: 40px;
}

/* index.html */

.frontBanner {
    background-image: url('media/abstract-art.jpg');
    background-size: cover; /* cover image */
    background-repeat: no-repeat; /* to prevent repeating the image */
    padding-top: 150px;
    text-align: center;
    height: 40vh;
}

.overlay-shape {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 73vh;
    margin-top: 50px;
    background-color: rgb(48 32 32 / 50%);
    background-size: cover;
}

.overlay-heading-desktop {
    background-color: brown;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 75px;
    text-align: center;
    padding-top: 24px;
    white-space: nowrap;
}

.overlay-heading-mobile {
    display: none;
}

.underBannerText, .contributeText {
    padding: 30px 0 40px 0;
    text-align: center;
    text-transform: uppercase;
}

.projects-container {
    display: flex;
    position: relative;
    overflow-x: scroll;
    scrollbar-width: none;  /* Hide scrollbar for Firefox */
}

.projects-container::-webkit-scrollbar {
    display: none; /* Hide scrollbar for Edge, Chrome, Safari and Opera */
}

.bothArrowButtons {
    position: absolute;
    background-color: brown;
    border: 3px solid white;
    top: 91%;
}

.bothArrowButtons:hover {
    border: 3px solid black;
}

.bothArrowButtons:active {
    animation: shadow-inset-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

@keyframes shadow-inset-center {
  0% {
    box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
  }
  100% {
    box-shadow: inset 0 0 39px 0px rgba(0, 0, 0, 0.5);
  }
}

#arrowLeftButton {
    left: 1%;
    padding: 10px 6px 7px 11px;
}

#arrowRightButton {
    right: 1%;
    padding: 10px 11px 7px 6px;
}

.arrow {
    border: solid white;
    border-width: 0 4px 4px 0;
    display: inline-block;
    padding: 5px;
}

#arrow-left {
    transform: rotate(135deg);
}

#arrow-right {
    transform: rotate(-45deg);
}

.projects-items {
    display: flex;
    flex-direction: column;
    margin: 15px 12vh 10px 12vh; /* adjust as needed */
}

.firstItem {
    margin-left: 7vh;
}

.text-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.tags {
    display: inline-flex;
    justify-content: center;
    gap: 5px;
    flex-wrap: wrap;
    color: grey;
    width: 120%;
}

.otherTags, .first-tag {
    border: solid 1px;
    padding: 5px;
}

.projects-items a {
    text-decoration: none;
}
/* ... */

